<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/full_name_title"
        style="@style/title"
        android:text="@string/full_name"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/full_name"
        style="@style/body_content"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/full_name_title"

        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/full_name_title"
        app:layout_constraintTop_toTopOf="@+id/full_name_title"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/voice_title"
        style="@style/title"

        android:text="@string/voice"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/full_name_title"
        app:layout_constraintTop_toBottomOf="@+id/full_name_title" />

    <TextView
        android:id="@+id/voice_detail"
        style="@style/body_content"

        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/voice_title"
        app:layout_constraintStart_toStartOf="@id/full_name"
        app:layout_constraintTop_toTopOf="@+id/voice_title"
        app:layout_constraintVertical_bias="0.346" />

    <TextView
        android:id="@+id/age_title"
        style="@style/title"
        android:text="@string/age"
        app:layout_constraintEnd_toEndOf="@+id/voice_title"
        app:layout_constraintStart_toStartOf="@+id/voice_title"
        app:layout_constraintTop_toBottomOf="@+id/voice_title" />

    <TextView
        android:id="@+id/age_detail"
        style="@style/body_content"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/age_title"

        app:layout_constraintStart_toStartOf="@+id/voice_detail"
        app:layout_constraintTop_toTopOf="@+id/age_title" />

</androidx.constraintlayout.widget.ConstraintLayout>